Update Fall Event Resource to have historical data
